2006-01-26 Jeremy Cribb <jcribb@email.unc.edu>
	* rod_ve.m: fixed transpose errors, added degrees of freedom variable, updated comments and documentation.
	* rod_msd.m: removed debugging code, fixed transpose errors, changed particle counting.

2006-01-21  Jeremy Cribb <jcribb@email.unc.edu>
	* ve.m: used real component when plotting errorbars to avoid "plotting neg (imag) parts in log space" warning.
	* rod_ve.m: same.

2006-01-21  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m: switched to use of "NaN" functions so that it is no longer required for all trackers to exist for all known time points for mean-square displacement and viscoelastic methods.  The standard error reported by the code is weighted by the number of existing datapoints for each window size rather than the global number of trackers for the entire input dataset.
	* ve.m: same.
	* rod_msd.m: same.
	* rod_ve.m: Same.

2006-01-17  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m: added pixels-to-microns conversion factor to accomodate more than one objective/multiplier.

2006-01-12  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m: now writes the final MSD data structure to a tab-delimited file.
	* rod_msd.m: same. also added recording of diffusion constants in the output structure.
	* rod.ve.m: added comments.

2005-12-08  Jeremy Cribb <jcribb@email.unc.edu>
	* rod_msd.m: added. computes the mean square displacement vs. a time-window for a diffusing rod.
	* rod_ve.m: added. computes complex modulus and viscosity for a diffusing rod, using output from rod_msd.m.

2005-10-06  Jeremy Cribb <jcribb@email.unc.edu>
	* ve.m: updated documentation.  added number of beads tracked to output.

2005-10-05  Jeremy Cribb <jcribb@email.unc.edu>
	* ve.m: rearranged output data structure such that each bead's data is stored in 'raw', the mean values in 'mean', and the standard error values in 'error'.

2005-08-10  Jeremy Cribb <jcribb@email.unc.edu>